<resources>
    <string name="app_name">Library Management System</string>
    <string name="item_1">Item 1</string>
    <string name="item_2">Item 2</string>
    <string name="save_button_description">save_button_description</string>
    <string name="navigation_drawer_open">Open drawer</string>
    <string name="navigation_drawer_close">Close drawer</string>
    <string name="logout">\n</string>
    <string name="student_details">\n</string>
    <string name="add_new_student" />
    <string name="add_new_books" />
    <string name="librarymanagement" />
    <string name="data_structure">Data Structure\n\n</string>
    <string name="issue">issue\n</string>
    <string name="python">Python</string>
    <string name="c_book">C_Book</string>
    <string name="sign_up">Sign Up</string>
    <string name="don_t_have_an_account">dont have an account</string>
    <string name="my_name_is_not_devdas">\'My name is not devdas\'</string>
    <string name="atomic_habits">\'Atomic Habits\'</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="searchbar_hint">Search here..\n</string>

</resources>