<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#121213">

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview1"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="30dp"
        android:layout_marginTop="33dp"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="ExtraText">

        <ImageView
            android:id="@+id/book1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/book1" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/book_title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview1"
        android:layout_marginStart="35dp"
        android:layout_marginTop="7dp"
        android:fontFamily="cursive"
        android:text="'My name is not devdas'"
        android:textColor="@color/librarymanagement"
        android:textSize="19dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview1" />

    <ImageButton
        android:id="@+id/save_Btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="250dp"
        android:layout_marginEnd="325dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/save_button_description"
        android:src="@drawable/savebtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview1" />

    <Button
        android:id="@+id/issue_btn"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:layout_below="@+id/book_title1"
        android:layout_marginStart="110dp"
        android:layout_marginTop="13dp"
        android:backgroundTint="@color/librarymanagement"
        android:text="Issue"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview2"
        android:layout_width="163dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="7dp"
        android:layout_marginTop="33dp"
        android:layout_toEndOf="@+id/cardview1"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/book2"
            android:layout_width="match_parent"
            android:layout_height="171dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:scaleType="centerCrop"
            android:src="@drawable/book2" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/book_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview2"
        android:layout_marginStart="235dp"
        android:layout_marginTop="12dp"
        android:fontFamily="cursive"
        android:text="'Solar Bones'"
        android:textColor="@color/librarymanagement"
        android:textSize="22dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview1" />

    <ImageButton
        android:id="@+id/savebtn2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="228dp"
        android:layout_marginTop="258dp"
        android:layout_marginEnd="138dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/save_button_description"
        android:src="@drawable/savebtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/issuebtn3"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:layout_below="@+id/cardview2"
        android:layout_marginStart="280dp"
        android:layout_marginTop="47dp"
        android:backgroundTint="@color/librarymanagement"
        android:text="Issue"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview3"
        android:layout_width="142dp"
        android:layout_height="169dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="316dp"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/book3"
            android:layout_width="138dp"
            android:layout_height="171dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/book3" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/book_title3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview3"
        android:layout_marginStart="40dp"
        android:layout_marginTop="5dp"
        android:fontFamily="cursive"
        android:text="'Atomic Habits'"
        android:textColor="@color/librarymanagement"
        android:textSize="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cardview3" />

    <ImageButton
        android:id="@+id/savebtn1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_title3"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="325dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/save_button_description"
        android:src="@drawable/savebtn" />

    <Button
        android:id="@+id/issuebtn2"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:layout_below="@+id/book_title3"
        android:layout_marginStart="80dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/librarymanagement"
        android:text="Issue"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView4"
        android:layout_width="142dp"
        android:layout_height="169dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="316dp"
        app:cardCornerRadius="20dp"
        android:layout_toRightOf="@+id/cardview3">

        <ImageView
            android:id="@+id/book4"
            android:layout_width="138dp"
            android:layout_height="171dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/book4" />

    </androidx.cardview.widget.CardView>

    <ImageButton
        android:id="@+id/savebtn4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_title4"
        android:layout_marginStart="-157dp"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@+id/issuebtn3"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/save_button_description"
        android:src="@drawable/savebtn" />

    <Button
        android:id="@+id/issuebtn4"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:layout_below="@+id/book_title4"
        android:layout_toRightOf="@id/savebtn4"
        android:layout_marginStart="28dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="@color/librarymanagement"
        android:text="@string/issue"
        android:textColor="@color/black"
        android:textSize="13dp" />

    <TextView
        android:id="@+id/book_title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView4"
        android:layout_marginStart="63dp"
        android:layout_marginTop="7dp"
        android:layout_toEndOf="@+id/book_title3"
        android:fontFamily="cursive"
        android:text="@string/data_structure"
        android:textColor="@color/librarymanagement"
        android:textSize="20dp" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView5"
        android:layout_width="142dp"
        android:layout_height="169dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="90dp"
        android:layout_below="@+id/cardview3"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/book5"
            android:layout_width="138dp"
            android:layout_height="171dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/book5" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/book_title5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardView5"
        android:layout_marginStart="70dp"
        android:layout_marginTop="13dp"
        android:fontFamily="cursive"
        android:text="@string/python"
        android:textColor="@color/librarymanagement"
        android:textSize="20dp" />

    <ImageButton
        android:id="@+id/savebtn5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_title5"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="325dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/save_button_description"
        android:src="@drawable/savebtn" />

    <Button
        android:id="@+id/issuebtn5"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:layout_below="@+id/book_title5"
        android:layout_marginStart="80dp"
        android:layout_marginTop="6dp"
        android:backgroundTint="@color/librarymanagement"
        android:text="Issue"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:id="@+id/cardview6"
        android:layout_width="142dp"
        android:layout_height="169dp"
        android:layout_marginStart="30dp"
        android:layout_marginTop="86dp"
        android:layout_below="@+id/cardView4"
        android:layout_toRightOf="@+id/cardView5"
        app:cardCornerRadius="20dp">

        <ImageView
            android:id="@+id/book6"
            android:layout_width="138dp"
            android:layout_height="171dp"
            android:layout_alignParentStart="true"
            android:src="@drawable/book6" />

    </androidx.cardview.widget.CardView>

    <TextView
        android:id="@+id/book_title6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/cardview6"
        android:layout_marginStart="69dp"
        android:layout_marginTop="11dp"
        android:layout_toRightOf="@+id/issuebtn5"
        android:fontFamily="cursive"
        android:text="@string/c_book"
        android:textColor="@color/librarymanagement"
        android:textSize="20dp" />

    <ImageButton
        android:id="@+id/savebtn6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/book_title6"
        android:layout_toRightOf="@+id/issuebtn5"
        android:layout_marginStart="28dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="325dp"
        android:background="?attr/selectableItemBackground"
        android:contentDescription="@string/save_button_description"
        android:src="@drawable/savebtn" />

    <Button
        android:id="@+id/issuebtn6"
        android:layout_width="83dp"
        android:layout_height="42dp"
        android:layout_below="@+id/book_title6"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="89dp"
        android:layout_marginTop="9dp"
        android:layout_toRightOf="@+id/issuebtn5"
        android:backgroundTint="@color/librarymanagement"
        android:text="Issue"
        android:textColor="@color/black"
        android:textSize="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</RelativeLayout>
